--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header-top></app-header-top>
-<app-calendar-app></app-calendar-app>
+<!-- <app-header-top></app-header-top>
+<app-calendar-app></app-calendar-app> -->
+
+<app-leave-type-list></app-leave-type-list>
