--- a/frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,21 +1,21 @@
 <div class="sidebar_menu" [@onSideNavChange]="sidebarState">
   <mat-nav-list class="menu-list">
     <a mat-list-item routerLinkActive="active-list-item" routerLink="login" title="Login">
-      <mat-icon class="icon" [@iconAnimation]="sidebarState">input</mat-icon>
-      <span class="label" [@labelAnimation]="sidebarState">Login</span>
+      <mat-icon class="icon" [@iconAnimation]="sidebarState"></mat-icon>
+      <span class="label" [@labelAnimation]="sidebarState">Organisation</span>
     </a>
     <mat-divider></mat-divider>
     <a mat-list-item routerLinkActive="active-list-item" routerLink="dashboard" title="Dashboard">
-      <mat-icon class="icon" [@iconAnimation]="sidebarState">dashboard</mat-icon>
-      <span class="label" [@labelAnimation]="sidebarState">Dashboard</span>
+      <mat-icon class="icon" [@iconAnimation]="sidebarState"></mat-icon>
+      <span class="label" [@labelAnimation]="sidebarState">Departement</span>
     </a>
     <a mat-list-item routerLinkActive="active-list-item" routerLink="work" title="Work">
-      <mat-icon class="icon" [@iconAnimation]="sidebarState">work</mat-icon>
-      <span class="label" [@labelAnimation]="sidebarState">Work</span>
+      <mat-icon class="icon" [@iconAnimation]="sidebarState"></mat-icon>
+      <span class="label" [@labelAnimation]="sidebarState">Equipe</span>
     </a>
     <a mat-list-item routerLinkActive="active-list-item" routerLink="feedback" title="Feedback">
-      <mat-icon class="icon" [@iconAnimation]="sidebarState">feedback</mat-icon>
-      <span class="label" [@labelAnimation]="sidebarState">Feedback</span>
+      <mat-icon class="icon" [@iconAnimation]="sidebarState"></mat-icon>
+      <span class="label" [@labelAnimation]="sidebarState">Site</span>
     </a>
   </mat-nav-list>
 </div>
