--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,11 +3,12 @@
 <app-header-top></app-header-top>
 
 <mat-sidenav-container>
-    <mat-sidenav mode="side" opened="true" >
+    <mat-sidenav mode="side" opened="true" style="min-width:60px; background: #F3F3F3;" autosize fixedTopGap="56">
       <app-sidebar></app-sidebar>
     </mat-sidenav>
   
     <mat-sidenav-content>
-        <app-leave-type-list></app-leave-type-list>
+      <app-leave-type-list></app-leave-type-list>
+
     </mat-sidenav-content>
-  </mat-sidenav-container>
+</mat-sidenav-container>
