--- a/frontend/src/app/views/leaveType-view/leave-type-list/leave-type-list.component.html
+++ b/frontend/src/app/views/leaveType-view/leave-type-list/leave-type-list.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
+<div class="panel panel-primary main_container" style=" height:100vh;">
     <div class="panel-heading">
       <h2>LeaveType List</h2>
     </div>
