--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
     </mat-sidenav>
   
     <mat-sidenav-content>
-      <app-leave-type-list></app-leave-type-list>
-
+      <!-- <app-leave-type-list></app-leave-type-list> -->
+<router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
