--- a/frontend/src/app/views/site-view/update-site/update-site.component.html
+++ b/frontend/src/app/views/site-view/update-site/update-site.component.html
@@ -1,9 +1,9 @@
-<h3>Update LeaveType</h3>
+<h3>Update Site</h3>
 <div style="width: 400px;">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" required [(ngModel)]="departement.name" name="name">
+      <input type="text" class="form-control" id="name" required [(ngModel)]="site.name" name="name">
     </div>
 
  
