--- a/frontend/src/app/views/team-view/create-team/create-team.component.html
+++ b/frontend/src/app/views/team-view/create-team/create-team.component.html
@@ -1,4 +1,4 @@
-<h3>Create LeaveType</h3>
+<h3>Create Team</h3>
 <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -6,7 +6,7 @@
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" required [(ngModel)]="departement.name" name="name">
+      <input type="text" class="form-control" id="name" required [(ngModel)]="team.name" name="name">
     </div>
 
 
