--- a/frontend/src/app/views/team-view/update-team/update-team.component.html
+++ b/frontend/src/app/views/team-view/update-team/update-team.component.html
@@ -1,9 +1,9 @@
-<h3>Update LeaveType</h3>
+<h3>Update Team</h3>
 <div style="width: 400px;">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" required [(ngModel)]="departement.name" name="name">
+      <input type="text" class="form-control" id="name" required [(ngModel)]="team.name" name="name">
     </div>
 
  
