--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,17 +1,24 @@
 <!-- <app-header-top></app-header-top>
 <app-calendar-app></app-calendar-app> -->
-<!-- <app-header-top></app-header-top>
+
+
+
+<app-header-top></app-header-top>
 
 <mat-sidenav-container>
-    <mat-sidenav mode="side" opened="true" style="min-width:60px; background: #F3F3F3;" autosize fixedTopGap="56">
+    <mat-sidenav mode="side" opened="true" style="min-width:60px; background: #F3F3F3;" autosize fixedTopGap="56" >
       <app-sidebar></app-sidebar>
     </mat-sidenav>
   
     <mat-sidenav-content>
 <router-outlet></router-outlet>
     </mat-sidenav-content>
-</mat-sidenav-container> -->
-<div id="app">
+</mat-sidenav-container>
+
+
+
+
+<!-- <div id="app">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
     <a href="#" class="navbar-brand">bezKoder</a>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
@@ -21,9 +28,7 @@
       <li class="nav-item" *ngIf="showAdminBoard">
         <a href="/admin" class="nav-link" routerLink="admin">Admin Board</a>
       </li>
-      <li class="nav-item" *ngIf="showModeratorBoard">
-        <a href="/mod" class="nav-link" routerLink="mod">Moderator Board</a>
-      </li>
+
       <li class="nav-item">
         <a href="/user" class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
       </li>
@@ -46,9 +51,9 @@
         <a href class="nav-link" (click)="logout()">LogOut</a>
       </li>
     </ul>
-  </nav>
+  </nav> 
 
   <div class="container">
     <router-outlet></router-outlet>
   </div>
-</div>
+</div>-->
