--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,12 +6,16 @@
 <app-header-top></app-header-top>
 
 <mat-sidenav-container>
-    <mat-sidenav mode="side" opened="true" style="min-width:60px; background: #F3F3F3;" autosize fixedTopGap="56" >
+ 
+    <!-- <mat-sidenav mode="side" opened="true" style="min-width:60px; background: #F3F3F3;" autosize fixedTopGap="56" >
       <app-sidebar></app-sidebar>
-    </mat-sidenav>
-  
+    </mat-sidenav> -->
+    
     <mat-sidenav-content>
-<router-outlet></router-outlet>
+      
+<router-outlet>
+  
+</router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
 
