--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,7 +2,7 @@
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~bootstrap/dist/css/bootstrap.css";
-
+@import 'material-icons/iconfont/material-icons.css';
 html,
 body {
   height: 100%;
